@@ -4,8 +4,8 @@ Authors@R: c(person(c("Steven", "E."), "Pav",
     role=c("aut","cre"),
     email="shabbychef@gmail.com",
     comment = c(ORCID = "0000-0002-4197-6195")))
-Version: 0.2.5
-Date: 2018-08-27
+Version: 0.2.6
+Date: 2019-04-18
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
@@ -58,4 +58,4 @@ Collate:
     'twomoments.r'
     'vcov.r'
     'vec.r'
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
