@@ -1,4 +1,9 @@
 
+2019-04-19 Steven E. Pav <shabbychef@gmail.com>
+* CRAN emergency release, version 0.2.6
+* match new generic signature for colSums, colMeans, 
+rowSums, rowMeans.
+
 2018-08-27 Steven E. Pav <shabbychef@gmail.com>
 * CRAN emergency release, version 0.2.5
 * dumb down vignette for alternative BLAS/LAPACK libraries.
